--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
             android:icon="@drawable/icon_logo"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
+            android:networkSecurityConfig="@xml/xml_security_network"
             android:supportsRtl="true"
             android:theme="@style/Theme.MaterialComponents.NoActionBar">
         <activity android:name=".SplashScreen">
